--- a/starter/03-CSS-Fundamentals/index.html
+++ b/starter/03-CSS-Fundamentals/index.html
@@ -102,7 +102,9 @@
         </p>
 
         <ul>
-          <li>To be able to use the fundamental web dev language</li>
+          <li class="first-li">
+            To be able to use the fundamental web dev language
+          </li>
           <li>
             To hand-craft beautiful websites instead of relying on tools like
             Worpress or Wix
